--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-currentVersion=0.1
+currentVersion=0.1-SNAPSHOT
 
 dropwizardVersion=0.6.2
 groovyVersion=2.1.3
-spockVersion=0.7-groovy-2.0
+spockVersion=1.0-groovy-2.0-SNAPSHOT
+serverName-localhost
+portNumber=8090
