--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ version = "${currentVersion}"
 
 apply plugin: 'shadow'
 
-apply plugin: 'application'
+//apply plugin: 'application'
 
 // Run code narc before the test phase begins
 test.dependsOn codenarcMain
@@ -91,7 +91,7 @@ shadow {
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
 }
-/*
+
 task run(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service using dev configuration") << {
     // Grab any dw. properties that are specified on the command line and pass to the Java process (i.e. dw.http.port=8080)
     def props = project.ext.properties.findAll { it.key.startsWith('dw') }
@@ -101,7 +101,7 @@ task run(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service us
         systemProperties = props
     }
 }
-  */
+
 task migrate(dependsOn: 'shadow', group: 'dropwizard', description: "Run migrations using the dev configuration") << {
     javaexec {
         main = '-jar'
@@ -115,5 +115,3 @@ task dropAll(dependsOn: 'shadow', group: 'dropwizard',  description: "Run drop-a
         args = ["${shadow.shadowJar.getPath()}", 'db', 'drop-all', 'dev_config.yml', '--confirm-delete-everything']
     }
 }
-
-task stage(dependsOn: ['shadow', 'clean', 'installApp'])
