--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,24 @@
+apply plugin: 'groovy'
+apply plugin: 'cobertura'
+apply plugin: 'codenarc'
+apply plugin: 'application'
+apply plugin: 'fatjar'
+apply plugin: 'project-report'
+apply plugin: 'idea'
+apply plugin: 'maven'
+apply plugin: 'shadow'
+
+
+group = 'com.atimbo'
+version = "${currentVersion}"
+
+// The main class of the application
+mainClassName = 'com.atimbo.fitness.nutrient.NutrientDataService'
+
+// Use Java 6 by default
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 buildscript {
     repositories {
         mavenLocal()
@@ -13,22 +34,10 @@ buildscript {
     dependencies {
         classpath "net.saliman:gradle-cobertura-plugin:1.1.0"
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.0.16'
+        classpath 'eu.appsatori:gradle-fatjar-plugin:0.1.3'
         classpath 'org.gradle.plugins:shadow:0.6'
     }
 }
-
-apply plugin: 'cobertura'
-apply plugin: 'codenarc'
-apply plugin: 'groovy'
-
-apply plugin: 'maven'
-
-group = 'com.atimbo'
-version = "${currentVersion}"
-
-apply plugin: 'shadow'
-
-//apply plugin: 'application'
 
 // Run code narc before the test phase begins
 test.dependsOn codenarcMain
@@ -39,9 +48,6 @@ repositories {
     // Spock snapshots are available from the Sonatype OSS snapshot repository
     maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
-
-// The main class of the application
-mainClassName = 'com.atimbo.fitness.nutrient.NutrientDataService'
 
 dependencies {
     compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
@@ -91,7 +97,7 @@ shadow {
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
 }
-
+/*
 task run(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service using dev configuration") << {
     // Grab any dw. properties that are specified on the command line and pass to the Java process (i.e. dw.http.port=8080)
     def props = project.ext.properties.findAll { it.key.startsWith('dw') }
@@ -101,7 +107,7 @@ task run(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service us
         systemProperties = props
     }
 }
-
+*/
 task migrate(dependsOn: 'shadow', group: 'dropwizard', description: "Run migrations using the dev configuration") << {
     javaexec {
         main = '-jar'
@@ -115,3 +121,24 @@ task dropAll(dependsOn: 'shadow', group: 'dropwizard',  description: "Run drop-a
         args = ["${shadow.shadowJar.getPath()}", 'db', 'drop-all', 'dev_config.yml', '--confirm-delete-everything']
     }
 }
+
+// Configure the fatJar task
+fatJar {
+    classifier 'fat'
+
+    // We need to add the main class to the manifest, otherwise the JAR won't start.
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+
+    // We have to exclude signature files from the fat JAR, otherwise we'll get invalid signature file digest errors.
+    exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
+}
+
+// Configure the run task to start the Dropwizard service
+
+run {
+    args 'server', 'dev_config.yml'
+}
+
+task stage(dependsOn: ['clean', 'fatJar'])
