--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
+import org.gradle.api.plugins.shadow.ShadowPlugin
+import org.gradle.api.plugins.shadow.transformers.ServiceFileTransformer
+
 apply plugin: 'groovy'
-apply plugin: 'cobertura'
-apply plugin: 'codenarc'
+//apply plugin: 'cobertura'
+//apply plugin: 'codenarc'
 apply plugin: 'application'
-apply plugin: 'fatjar'
 apply plugin: 'project-report'
 apply plugin: 'idea'
-apply plugin: 'maven'
-apply plugin: 'shadow'
+apply plugin: ShadowPlugin
 
 
 group = 'com.atimbo'
@@ -34,13 +35,13 @@ buildscript {
     dependencies {
         classpath "net.saliman:gradle-cobertura-plugin:1.1.0"
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.0.16'
-        classpath 'eu.appsatori:gradle-fatjar-plugin:0.1.3'
-        classpath 'org.gradle.plugins:shadow:0.6'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.0.2'
+        classpath 'org.gradle.plugins:shadow:0.7.4'
     }
 }
 
 // Run code narc before the test phase begins
-test.dependsOn codenarcMain
+//test.dependsOn codenarcMain
 
 repositories {
     mavenLocal()
@@ -58,11 +59,12 @@ dependencies {
     compile "com.yammer.dropwizard:dropwizard-client:${dropwizardVersion}"
 
     compile 'org.eclipse.jetty:jetty-servlets:8.1.8.v20121106'
-    compile 'com.sun.jersey:jersey-client:1.18'
+
+    compile 'asm:asm-all:2.2'
 
     // DB
-    //compile 'mysql:mysql-connector-java:5.1.25'
-    compile 'org.postgresql:postgresql:9.3-1100-jdbc4'
+    compile 'mysql:mysql-connector-java:5.1.25'
+    //compile 'org.postgresql:postgresql:9.3-1100-jdbc4'
 
     testCompile "com.yammer.dropwizard:dropwizard-testing:${dropwizardVersion}"
     testCompile "org.spockframework:spock-core:${spockVersion}"
@@ -82,63 +84,44 @@ jar {
     }
 }
 
-cobertura {
-    coverageFormats = ['xml', 'html']
-    coverageIncludes = ['**/*.java', '**/*.groovy']
-    coverageSourceDirs = [sourceSets.main.allSource.srcDirs]
-}
-
+//cobertura {
+//    coverageFormats = ['xml', 'html']
+//    coverageIncludes = ['**/*.java', '**/*.groovy']
+//    coverageSourceDirs = [sourceSets.main.allSource.srcDirs]
+//}
+/*
 codenarc {
     configFile = rootProject.file('codenarcrule.groovy')
     reportFormat = System.properties['codeNarcOutput'] ?: 'html'
 }
+*/
 
 shadow {
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
+    transformer ServiceFileTransformer
 }
-/*
-task run(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service using dev configuration") << {
+
+task runApp(dependsOn: 'shadow', group: 'dropwizard',  description: "Run service using dev configuration") << {
     // Grab any dw. properties that are specified on the command line and pass to the Java process (i.e. dw.http.port=8080)
     def props = project.ext.properties.findAll { it.key.startsWith('dw') }
     javaexec {
         main = '-jar'
-        args = ["${shadow.shadowJar.getPath()}", 'server', 'dev_config.yml']
+        args = ["${shadow.shadowJar.getPath()}", 'server', 'mysql_dev_config.yml']
         systemProperties = props
     }
 }
-*/
+
 task migrate(dependsOn: 'shadow', group: 'dropwizard', description: "Run migrations using the dev configuration") << {
     javaexec {
         main = '-jar'
-        args = ["${shadow.shadowJar.getPath()}", 'db', 'migrate', 'dev_config.yml']
+        args = ["${shadow.shadowJar.getPath()}", 'db', 'migrate', 'mysql_dev_config.yml']
     }
 }
 
 task dropAll(dependsOn: 'shadow', group: 'dropwizard',  description: "Run drop-all database command") << {
     javaexec {
         main = '-jar'
-        args = ["${shadow.shadowJar.getPath()}", 'db', 'drop-all', 'dev_config.yml', '--confirm-delete-everything']
+        args = ["${shadow.shadowJar.getPath()}", 'db', 'drop-all', 'mysql_dev_config.yml', '--confirm-delete-everything']
     }
 }
-
-// Configure the fatJar task
-fatJar {
-    classifier 'fat'
-
-    // We need to add the main class to the manifest, otherwise the JAR won't start.
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }
-
-    // We have to exclude signature files from the fat JAR, otherwise we'll get invalid signature file digest errors.
-    exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
-}
-
-// Configure the run task to start the Dropwizard service
-
-run {
-    args 'server', 'dev_config.yml'
-}
-
-task stage(dependsOn: ['clean', 'fatJar'])
