--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 currentVersion=0.1.0-SNAPSHOT
 
 dropwizardVersion=0.6.2
-groovyVersion=2.1.3
-spockVersion=1.0-groovy-2.0-SNAPSHOT
+groovyVersion=2.4.1
+spockVersion=1.0-groovy-2.4
 serverName-localhost
 portNumber=8090
