--- a/mysql_dev_config.yml
+++ b/mysql_dev_config.yml
@@ -13,7 +13,7 @@ database:
   password: mysql
 
   # the JDBC URL
-  url: jdbc:mysql://localhost:3306/fitness
+  url: jdbc:mysql://localhost:3306/usda_sr25
 
   # any properties specific to your JDBC driver:
   properties:
