--- a/build.gradle
+++ b/build.gradle
@@ -60,16 +60,18 @@ dependencies {
 
     compile 'org.eclipse.jetty:jetty-servlets:8.1.8.v20121106'
 
-    compile 'asm:asm-all:2.2'
+    compile ('org.ow2.asm:asm-all:5.0.3') {
+        exclude group: 'asm'
+    }
 
     // DB
     compile 'mysql:mysql-connector-java:5.1.25'
-    //compile 'org.postgresql:postgresql:9.3-1100-jdbc4'
 
     testCompile "com.yammer.dropwizard:dropwizard-testing:${dropwizardVersion}"
     testCompile "org.spockframework:spock-core:${spockVersion}"
     testCompile 'junit:junit:4.11'
     testCompile 'com.h2database:h2:1.3.168'
+    testCompile 'cglib:cglib:3.1'
 }
 
 jar {
